United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6921799 JSR 292 call sites should not be fixed-up
6921799 : JSR 292 call sites should not be fixed-up

Details
Type:
Bug
Submit Date:
2010-02-01
Status:
Resolved
Updated Date:
2010-07-29
Project Name:
JDK
Resolved Date:
2010-02-09
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:

Sub Tasks

Description
MethodHandle invoke call sites should not be fixed-up by SharedRuntime::fixup_callers_callsite as c2i/i2c adapters are used to implement MethodHandle actions.

JRuby's bench_threaded_reverse.rb hits this problem very easily on SMP machines.

                                    

Comments
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/5fcfaa1ad96f,ChangeRequest=6921799
                                     
2010-02-02



Hardware and Software, Engineered to Work Together