6921799: JSR 292 call sites should not be fixed-up

MethodHandle invoke call sites should not be fixed-up by SharedRuntime::fixup_callers_callsite as c2i/i2c adapters are used to implement MethodHandle actions.

Reviewed-by: kvn, never